deplov-v3-autos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deploy-autoscaling
  labels:
    app: my-k8s-app
    owner: aziz
spec:
  replicas: 2
  selector:
    matchLabels:
      project: kgb 
  template:
    metadata:
      labels:
        project: kgb 
    spec:
      containers:
      - name: kgb-web
        image: adv4000/k8sphp:version1
        ports:
        - containerPort: 80
