pod-myweb-v3.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-app
  labels: 
    env: prod
    app: main
    owner: aziz
spec:
  containers:
  - name : container-tomcat
    image: tomcat:8.5.38
    ports:
      - containerPort: 8080

  - name : container-nginx
    image: nginx
    ports:
      - containerPort: 80
