ingress.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.*****
  http:
    paths:
      - backend:
        serviceName: main
        servicePort: 80
  - host: web1.****
  http:
    paths:
      - backend:
        serviceName: web1
        servicePort: 80
  - host: web2.*****
  http:
    paths:
      - backend:
        serviceName: web2
        servicePort: 80
  - host: cat.*****
  http:
    paths:
      - backend:
        serviceName: cat
        servicePort: 8080
